Link to documentation for services and EPs
I think this hyperlinking thing is going to be big.

--- a/source/documentation/rest/incidents/list.html
+++ b/source/documentation/rest/incidents/list.html
@@ -367,7 +367,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             <a href="/documentation/rest/types#object">Object</a>
           </td>
           <td>
-            The PagerDuty service that the incident belongs to. The service will contain fields of its own.
+            The PagerDuty <a href="/documentation/rest/services/">service</a> that the incident belongs to. The service will contain fields of its own.
           </td>
         </tr>
         <tr>
@@ -378,7 +378,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             <a href="/documentation/rest/types#object">Object</a>
           </td>
           <td>
-            The escalation policy that the incident belongs to. The policy will contain fields of its own.
+            The <a href="/documentation/rest/escalation_policies/">escalation policy</a> that the incident belongs to. The policy will contain fields of its own.
           </td>
         </tr>
         <tr>
