added form on landing page of devsite and fix erros on beta page

--- a/source/documentation/beta/index.html
+++ b/source/documentation/beta/index.html
@@ -50,7 +50,14 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 <br />
 <br />  
 <br />  
+<body>
 
 <p>
-  Feel free to email us if you have any questions at beta@pagerudy.com.
+Feel free to email us if you have any questions at 
+<a href="mailto:beta@pagerduty.com" target="_top">beta@pagerduty.com</a>
+</p>
+
+
+
+</body>
 </p>
