--- a/source/index.html
+++ b/source/index.html
@@ -35,6 +35,7 @@ layout: index
                         </div>
                       </div>
                     </div>
+                    
                     <div class='section'>
                       <h3>Want to build something without coding?</h3>
                       With <a href="https://zapier.com/">Zapier</a> and <a href="https://support.pagerduty.com/hc/en-us/articles/202829420-Webhooks-Our-Most-Popular-Uses-For-Them">PagerDuty webhooks</a>, you can automate workflow with hundreds of apps.
@@ -51,6 +52,10 @@ on how to directly integrate PagerDuty with
 and a bunch more. If your monitoring system isn't directly supported, you can come back here and use our API
 to get events into PagerDuty.
 </div>
+<div class='section'>
+                      <h3>Want to be part of BetaDuty?</h3>
+                     Fill out this <a href="https://developer.pagerduty.com/beta">form</a> and we will contact you when a Beta of your choice opens! 
+                    </div>
 <div class='section'>
 <h3>Questions?</h3>
 <div>
