--- a/source/documentation/rest/incidents/list.html
+++ b/source/documentation/rest/incidents/list.html
@@ -321,7 +321,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
           </td>
           <td>
             <p>
-              The list of <code>pending_actions</code> on the incident. A <code>pending_actions</code> is an object containing all the pending_action objects for that incident at that current time. This list is empty if the status of the incident is <code>resolved</code>.
+              The list of <code>pending_actions</code> on the incident. A <code>pending_actions</code> is an array containing all the pending_action objects for the incident at the current time. This list is empty if the status of the incident is <code>resolved</code>.
             </p>
             <p>
               A pending_action object contains <code>type</code> of action. <code>type</code> can be <code>escalate</code>, <code>unacknowledge</code> or <code>resolve</code>.
