--- a/source/documentation/rest/incidents/list.html
+++ b/source/documentation/rest/incidents/list.html
@@ -324,7 +324,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
               The list of <code>pending_actions</code> on the incident. A <code>pending_actions</code> is an array containing all the pending_action objects for the incident at the current time. This list is empty if the status of the incident is <code>resolved</code>.
             </p>
             <p>
-              A pending_action object contains <code>type</code> of action. <code>type</code> can be <code>escalate</code>, <code>unacknowledge</code> or <code>resolve</code>.
+              A pending_action object contains a <code>type</code> of action. <code>type</code> can be <code>escalate</code>, <code>unacknowledge</code> or <code>resolve</code>. A pending_action object contains <code>at</code>, the time at which the action will take place.
             </p>
             <p>
               Example: <code>pending_actions</code> field for an incident.
