Add contexts to event API

--- a/source/documentation/integration/events/trigger.html
+++ b/source/documentation/integration/events/trigger.html
@@ -145,6 +145,20 @@ layout: main
             An arbitrary JSON object containing any data you'd like included in the incident log.
           </td>
         </tr>
+        <tr>
+          <td>
+            contexts
+          </td>
+          <td>
+            <a href="/documentation/rest/types#object">Object</a>
+          </td>
+          <td>
+            No
+          </td>
+          <td>
+            Contexts to be included with the incident trigger such as links to graphs or images. A "type" is required for each context submitted. For type "link", an "href" is required. You may optionally specify "text" with more information about the link. For type "image", "src" must be specified with the image src. You may optionally specify an "href" with this image.
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -166,7 +180,24 @@ layout: main
       "details": {
         "ping time": "<span class='curl_params-ping time contenteditable' contenteditable='true'>1500ms</span>",
         "load avg": 0.75
-      }
+      },
+      "contexts":[ 
+        {
+          "type": "link",
+          "href": "http://acme.pagerduty.com",
+        },{
+          "type": "link",
+          "href": "http://acme.pagerduty.com",
+          "text": "View the incident on PagerDuty"
+        },{
+          "type": "image",
+          "src": "https://chart.googleapis.com/chart?chs=600x400&chd=t:6,2,9,5,2,5,7,4,8,2,1&cht=lc&chds=a&chxt=y&chm=D,0033FF,0,0,5,1"
+        },{
+          "type": "image",
+          "src": "https://chart.googleapis.com/chart?chs=600x400&chd=t:6,2,9,5,2,5,7,4,8,2,1&cht=lc&chds=a&chxt=y&chm=D,0033FF,0,0,5,1",
+          "href": "https://google.com"
+        }
+      ]
     }' \
     "https://events.pagerduty.com/generic/2010-04-15/create_event.json"</code>
 </pre>
@@ -199,7 +230,24 @@ layout: main
       "details": {
         "ping time": "<span class='curl_params-ping time contenteditable' contenteditable='true'>1500ms</span>",
         "load avg": 0.75
-      }
+      },
+      "contexts":[ 
+        {
+          "type": "link",
+          "href": "http://acme.pagerduty.com",
+        },{
+          "type": "link",
+          "href": "http://acme.pagerduty.com",
+          "text": "View the incident on PagerDuty"
+        },{
+          "type": "image",
+          "src": "https://chart.googleapis.com/chart?chs=600x400&chd=t:6,2,9,5,2,5,7,4,8,2,1&cht=lc&chds=a&chxt=y&chm=D,0033FF,0,0,5,1"
+        },{
+          "type": "image",
+          "src": "https://chart.googleapis.com/chart?chs=600x400&chd=t:6,2,9,5,2,5,7,4,8,2,1&cht=lc&chds=a&chxt=y&chm=D,0033FF,0,0,5,1",
+          "href": "https://google.com"
+        }
+      ]
     }' \
     "https://events.pagerduty.com/generic/2010-04-15/create_event.json"</code>
 </pre>
