--- a/source/documentation/rest/log_entries/show.html
+++ b/source/documentation/rest/log_entries/show.html
@@ -746,7 +746,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             Name
           </th>
           <th>
-            Required
+            Type
           </th>
           <th>
             Description
@@ -759,7 +759,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             type
           </td>
           <td>
-            Yes
+            <a href="/documentation/rest/types#string">String</a>
           </td>
           <td>
             The type of context being attached to the incident. This will be a "link" or "image". For more information, visit the documentation for <a href="/documentation/integration/events/trigger/">triggering events</a>.
@@ -770,7 +770,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             href
           </td>
           <td>
-            Yes
+            <a href="/documentation/rest/types#string">String</a>
           </td>
           <td>
             The link being attached to the incident.
@@ -781,7 +781,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             text
           </td>
           <td>
-            No
+            <a href="/documentation/rest/types#string">String</a>
           </td>
           <td>
             Optional information pertaining to the incident.
@@ -804,7 +804,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             Name
           </th>
           <th>
-            Required
+            Type
           </th>
           <th>
             Description
@@ -817,7 +817,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             type
           </td>
           <td>
-            Yes
+            <a href="/documentation/rest/types#string">String</a>
           </td>
           <td>
             The type of context being attached to the incident. This will be a "link" or "image". For more information, visit the documentation for <a href="/documentation/integration/events/trigger/">triggering events</a>.
@@ -828,7 +828,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             src
           </td>
           <td>
-            Yes
+            <a href="/documentation/rest/types#string">String</a>
           </td>
           <td>
             The source of the image being attached to the incident.
@@ -839,7 +839,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             href
           </td>
           <td>
-            No
+            <a href="/documentation/rest/types#string">String</a>
           </td>
           <td>
             Optional link for the image.
