--- a/source/documentation/integration/events/trigger.html
+++ b/source/documentation/integration/events/trigger.html
@@ -162,6 +162,128 @@ layout: main
       </tbody>
     </table>
   </div>
+    <h2 id='contexts'>
+    Contexts
+  </h2>
+  <p>
+    The <code>contexts</code> object is a list of informational assets attached to the incident. 
+  </p>
+  <h3>
+    Link
+  </h3>
+  <p>
+    The "link" type is used to attach links to an incident.
+  </p>
+  <div class="table-container">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>
+            Name
+          </th>
+          <th>
+            Required
+          </th>
+          <th>
+            Description
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            type
+          </td>
+          <td>
+            Yes
+          </td>
+          <td>
+            The type of context being attached to the incident. This will be a "link" or "image". For more information, visit the documentation for <a href="/documentation/integration/events/trigger/">triggering events</a>.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            href
+          </td>
+          <td>
+            Yes
+          </td>
+          <td>
+            The link being attached to the incident.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            text
+          </td>
+          <td>
+            No
+          </td>
+          <td>
+            Optional information pertaining to the incident.
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <h3>
+    Image
+  </h3>
+  <p>
+    The "image" type is used to attach images to an incident.
+  </p>
+  <div class="table-container">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>
+            Name
+          </th>
+          <th>
+            Required
+          </th>
+          <th>
+            Description
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            type
+          </td>
+          <td>
+            Yes
+          </td>
+          <td>
+            The type of context being attached to the incident. This will be a "link" or "image". For more information, visit the documentation for <a href="/documentation/integration/events/trigger/">triggering events</a>.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            src
+          </td>
+          <td>
+            Yes
+          </td>
+          <td>
+            The source of the image being attached to the incident.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            href
+          </td>
+          <td>
+            No
+          </td>
+          <td>
+            Optional link for the image.
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
   <h3>
     Example 1
   </h3>
