Add contexts to standard response format

--- a/source/documentation/rest/log_entries/show.html
+++ b/source/documentation/rest/log_entries/show.html
@@ -292,6 +292,20 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             Only for <code>assign</code>, <code>escalate</code> log entries. The user to which the incident is assigned.
           </td>
         </tr>
+        <tr>
+          <td>
+            contexts
+          </td>
+          <td>
+            <a href="/documentation/rest/types#object">Object</a>
+          </td>
+          <td>
+            No
+          </td>
+          <td>
+            Contexts to be included with the incident trigger such as links to graphs or images. A "type" is required for each context submitted. For type "link", an "href" is required. You may optionally specify "text" with more information about the link. For type "image", "src" must be specified with the image src. You may optionally specify an "href" with this image.
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
