Add note about https

--- a/source/documentation/integration/events/trigger.html
+++ b/source/documentation/integration/events/trigger.html
@@ -230,7 +230,7 @@ layout: main
     Image
   </h3>
   <p>
-    The "image" type is used to attach images to an incident.
+    The "image" type is used to attach images to an incident. Images must be served via HTTPS.
   </p>
   <div class="table-container">
     <table class="table table-striped">
