Add note to src as well

--- a/source/documentation/integration/events/trigger.html
+++ b/source/documentation/integration/events/trigger.html
@@ -267,7 +267,7 @@ layout: main
             Yes
           </td>
           <td>
-            The source of the image being attached to the incident.
+            The source of the image being attached to the incident. This image must be served via HTTPS.
           </td>
         </tr>
         <tr>
