--- a/source/documentation/integration/events/trigger.html
+++ b/source/documentation/integration/events/trigger.html
@@ -306,7 +306,7 @@ layout: main
       "contexts":[ 
         {
           "type": "link",
-          "href": "http://acme.pagerduty.com",
+          "href": "http://acme.pagerduty.com"
         },{
           "type": "link",
           "href": "http://acme.pagerduty.com",
@@ -356,7 +356,7 @@ layout: main
       "contexts":[ 
         {
           "type": "link",
-          "href": "http://acme.pagerduty.com",
+          "href": "http://acme.pagerduty.com"
         },{
           "type": "link",
           "href": "http://acme.pagerduty.com",
