A wild comma appears!

--- a/source/documentation/rest/log_entries/show.html
+++ b/source/documentation/rest/log_entries/show.html
@@ -1199,7 +1199,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
     "contexts":[ 
       {
         "type": "link",
-        "href": "http://acme.pagerduty.com",
+        "href": "http://acme.pagerduty.com"
       },{
         "type": "link",
         "href": "http://acme.pagerduty.com",
@@ -1257,7 +1257,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
     "contexts":[ 
       {
         "type": "link",
-        "href": "http://acme.pagerduty.com",
+        "href": "http://acme.pagerduty.com"
       },{
         "type": "link",
         "href": "http://acme.pagerduty.com",
