--- a/source/documentation/rest/teams/create.html
+++ b/source/documentation/rest/teams/create.html
@@ -106,7 +106,7 @@ POST https://<span class="base_url contenteditable persist" contenteditable="tru
   </p>
   <div class="clearfix"></div>
   <h4>
-    Response <span class="response-status">Status: 200 OK <a href="/documentation/rest/errors#http_codes"></a></span>
+    Response <span class="response-status">Status: 201 Created <a href="/documentation/rest/errors#http_codes"></a></span>
   </h4>
   <div class="response">
     <pre>
