Added "alt" to the link context information table

--- a/source/documentation/integration/events/trigger.html
+++ b/source/documentation/integration/events/trigger.html
@@ -281,6 +281,17 @@ layout: main
             Optional link for the image.
           </td>
         </tr>
+        <tr>
+          <td>
+            alt
+          </td>
+          <td>
+            No
+          </td>
+          <td>
+            Optional alternative text for the image.
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
