include service description in incident responses

--- a/source/documentation/rest/incidents/list.html
+++ b/source/documentation/rest/incidents/list.html
@@ -616,6 +616,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
       "service": {
         "id": "PBF77WY",
         "name": "Generic Api",
+        "description": "Description for Generic Api Service.",
         "html_url": "https://acme.pagerduty.com/services/PBF77WY"
       },
       "assigned_to_user": {
@@ -658,6 +659,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
       "service": {
         "id": "PFRV88L",
         "name": "Generic Email",
+        "description": "Description for Generic Email Service.",
         "html_url": "https://acme.pagerduty.com/services/PFRV88L"
       },
       "assigned_to_user": {
