--- a/source/documentation/rest/incidents/show.html
+++ b/source/documentation/rest/incidents/show.html
@@ -73,6 +73,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
   "service": {
     "id": "PBAZLIU",
     "name": "service",
+    "description": "service description",
     "html_url": "https://acme.pagerduty.com/services/PBAZLIU"
   },
   "assigned_to_user": {
@@ -138,6 +139,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
   "service": {
     "id": "PBAZLIU",
     "name": "service",
+    "description": "service description",
     "html_url": "https://acme.pagerduty.com/services/PBAZLIU"
   },
   "assigned_to_user": {
