Add discourse to site

--- a/source/documentation/integration/events/index.html
+++ b/source/documentation/integration/events/index.html
@@ -331,4 +331,24 @@ https://events.pagerduty.com/generic/2010-04-15/create_event.json
   <p>
     If each of the events your monitoring system is sending is important, be sure to retry on a 403 response code, preferably with a back off.
   </p>
+
+
+
+
+<div id='discourse-comments'></div>
+
+<script type="text/javascript">
+  DiscourseEmbed = { discourseUrl: 'http://community.pagerduty.com/',
+                     discourseEmbedUrl: 'https://developer.pagerduty.com' };
+
+  (function() {
+    var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
+    d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+  })();
+</script>
+
+
+
+
 </div>
