--- a/source/documentation/integration/events/index.html
+++ b/source/documentation/integration/events/index.html
@@ -339,7 +339,7 @@ https://events.pagerduty.com/generic/2010-04-15/create_event.json
 
 <script type="text/javascript">
   DiscourseEmbed = { discourseUrl: 'http://community.pagerduty.com/',
-                     discourseEmbedUrl: 'https://developer.pagerduty.com' };
+                     discourseEmbedUrl: 'https://pd-developer-staging.herokuapp.com/' };
 
   (function() {
     var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
