Fix https request

--- a/source/documentation/integration/events/index.html
+++ b/source/documentation/integration/events/index.html
@@ -338,7 +338,7 @@ https://events.pagerduty.com/generic/2010-04-15/create_event.json
 <div id='discourse-comments'></div>
 
 <script type="text/javascript">
-  DiscourseEmbed = { discourseUrl: 'http://community.pagerduty.com/',
+  DiscourseEmbed = { discourseUrl: 'https://community.pagerduty.com/',
                      discourseEmbedUrl: 'https://pd-developer-staging.herokuapp.com/' };
 
   (function() {
