Add community site to beta page

--- a/source/documentation/beta/index.html
+++ b/source/documentation/beta/index.html
@@ -52,9 +52,25 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 <br />  
 <body>
 
-<p>
-Feel free to email us if you have any questions at 
-<a href="mailto:beta@pagerduty.com" target="_top">beta@pagerduty.com</a>
+<h2>Community Discussions</h2>
+    <p>
+        Feel free to email us at 
+      <a href="mailto:beta@pagerduty.com" target="_top">beta@pagerduty.com</a> or drop us a line through our beta community. We'll be happy to help you out.
+    </p>
+
+ <div id='discourse-comments'></div>
+
+<script type="text/javascript">
+  DiscourseEmbed = { discourseUrl: 'http://community.pagerduty.com/',
+                     topicId: 59 };
+
+  (function() {
+    var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
+    d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+  })();
+</script>
+</body>
 </p>
 
 
