Now with more S

--- a/source/documentation/beta/index.html
+++ b/source/documentation/beta/index.html
@@ -59,7 +59,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 
 <div id='discourse-comments'></div>
 <script type="text/javascript">
-  DiscourseEmbed = { discourseUrl: 'http://community.pagerduty.com/',
+  DiscourseEmbed = { discourseUrl: 'https://community.pagerduty.com/',
                      topicId: 59 };
 
   (function() {
