--- a/source/documentation/code/index.html
+++ b/source/documentation/code/index.html
@@ -72,3 +72,19 @@ breadcrumbs: true
 <p>
   Please review the <a href='/documentation/code/disclaimer'>Disclaimer</a> prior to downloading sample code.
 </p>
+
+  <h2>What're you building?</h2>
+    <p>
+      Have you made a library or tool that we should know about? Let us know here!
+    </p>
+<div id='discourse-comments'></div>
+<script type="text/javascript">
+  DiscourseEmbed = { discourseUrl: 'https://community.pagerduty.com/',
+                     topicId: 140 };
+
+  (function() {
+    var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
+    d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+  })();
+</script>
