--- a/source/documentation/rest/escalation_policies/create.html
+++ b/source/documentation/rest/escalation_policies/create.html
@@ -125,21 +125,23 @@ POST https://<span class="base_url contenteditable persist" contenteditable="tru
   </h3>
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
-    -d '{    
-      "name": "<span class='curl_params-name contenteditable' contenteditable='true'>Escalation Policy</span>",
-      "escalation_rules": [
-        {
-          "escalation_delay_in_minutes": 22,
-          "targets": [
-            {
-              "type": "<span class='curl_params-type contenteditable' contenteditable='true'>user</span>",
-              "id": "<span class='curl_params-id contenteditable' contenteditable='true'>PPSFHH7</span>"
-            }
-          ]
-        }
-      ],
-      "num_loops": 2
-    }' \
+    -d '{
+          "escalation_policy": {
+            "name": "<span class='curl_params-name contenteditable' contenteditable='true'>Escalation Policy</span>",
+            "escalation_rules": [
+              {
+                "escalation_delay_in_minutes": 22,
+                "targets": [
+                  {
+                    "type": "<span class='curl_params-type contenteditable' contenteditable='true'>user</span>",
+                    "id": "<span class='curl_params-id contenteditable' contenteditable='true'>PPSFHH7</span>"
+                  }
+                ]
+              }
+            ],
+            "num_loops": 2
+          }
+        }' \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/escalation_policies"</code>
 </pre>
   <p class="content-type-warning clearfix">
