--- a/source/documentation/rest/escalation_policies/escalation_rules/create.html
+++ b/source/documentation/rest/escalation_policies/escalation_rules/create.html
@@ -275,7 +275,17 @@ POST https://<span class="base_url contenteditable persist" contenteditable="tru
   </h3>
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
-    -d '{"escalation_rule":{"escalation_delay_in_minutes":10,"targets":[{"type":"<span class='curl_params-type contenteditable' contenteditable='true'>user</span>","id":"<span class='curl_params-id contenteditable' contenteditable='true'>PPSFHH7</span>"}]}}' \
+    -d '{
+          "escalation_rule": {
+            "escalation_delay_in_minutes": 10,
+            "targets": [
+              {
+                "type": "<span class='curl_params-type contenteditable' contenteditable='true'>user</span>",
+                "id": "<span class='curl_params-id contenteditable' contenteditable='true'>PPSFHH7</span>"
+              }
+            ]
+          }
+        }' \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/escalation_policies/<span class="sub_params_in_url-escalation_policy_id escalation_policy_id contenteditable" contenteditable="true">PBZ3BZV</span>/escalation_rules"</code>
 </pre>
   <p class="content-type-warning clearfix">
