--- a/source/documentation/rest/escalation_policies/update.html
+++ b/source/documentation/rest/escalation_policies/update.html
@@ -125,7 +125,11 @@ PUT https://<span class="base_url contenteditable persist" contenteditable="true
   </h3>
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X PUT \
-    -d '{"name":"<span class='curl_params-name contenteditable' contenteditable='true'>Escalation Policy 2</span>"}' \
+    -d '{
+          "escalation_policy": {
+            "name": "<span class='curl_params-name contenteditable' contenteditable='true'>Escalation Policy 2</span>"
+          }
+        }' \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/escalation_policies/<span class="sub_params_in_url-id id contenteditable" contenteditable="true">PBZ3BZV</span>"</code>
 </pre>
   <p class="content-type-warning clearfix">
