--- a/source/documentation/rest/incidents/notes/create.html
+++ b/source/documentation/rest/incidents/notes/create.html
@@ -139,7 +139,12 @@ POST https://<span class="base_url contenteditable persist" contenteditable="tru
   </h3>
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
-    -d '{"requester_id":"<span class='curl_params-requester_id contenteditable' contenteditable='true'>PPSFHH7</span>","note":{"content":"<span class='curl_params-content contenteditable' contenteditable='true'>New Note</span>"}}' \
+    -d '{
+          "requester_id": "<span class='curl_params-requester_id contenteditable' contenteditable='true'>PPSFHH7</span>",
+          "note": {
+            "content": "<span class='curl_params-content contenteditable' contenteditable='true'>New Note</span>"
+          }
+        }' \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/incidents/<span class="sub_params_in_url-incident_id incident_id contenteditable" contenteditable="true">PQL04E1</span>/notes"</code>
 </pre>
   <p class="content-type-warning clearfix">
