--- a/source/documentation/rest/services/update.html
+++ b/source/documentation/rest/services/update.html
@@ -234,7 +234,13 @@ PUT https://<span class="base_url contenteditable persist" contenteditable="true
   </h3>
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X PUT \
-    -d '{"service":{"name":"<span class='curl_params-name contenteditable' contenteditable='true'>My New Name</span>","description":"<span class='curl_params-description contenteditable' contenteditable='true'>Brand New Description</span>","escalation_policy_id":"<span class='curl_params-escalation_policy_id contenteditable' contenteditable='true'>PIJ90N7</span>"}}' \
+    -d '{
+          "service": {
+            "name": "<span class='curl_params-name contenteditable' contenteditable='true'>My New Name</span>",
+            "description": "<span class='curl_params-description contenteditable' contenteditable='true'>Brand New Description</span>",
+            "escalation_policy_id": "<span class='curl_params-escalation_policy_id contenteditable' contenteditable='true'>PIJ90N7</span>"
+          }
+        }' \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/services/<span class="sub_params_in_url-id id contenteditable" contenteditable="true">PBIS5NX</span>"</code>
 </pre>
   <p class="content-type-warning clearfix">
