--- a/source/documentation/rest/teams/create.html
+++ b/source/documentation/rest/teams/create.html
@@ -96,9 +96,11 @@ POST https://<span class="base_url contenteditable persist" contenteditable="tru
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
     -d '{
-      "name": "<span class="curl_params-name contenteditable" contenteditable="true">A Mob of Emus</span>",
-      "description": "<span class="curl_params-name contenteditable" contenteditable="true">Marauding across Australia</span>"
-    }' \
+          "team": {
+            "name": "<span class="curl_params-name contenteditable" contenteditable="true">A Mob of Emus</span>",
+            "description": "<span class="curl_params-name contenteditable" contenteditable="true">Marauding across Australia</span>"
+          }
+        }' \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/teams"</code>
 </pre>
   <p class="content-type-warning clearfix">
