--- a/source/documentation/rest/users/contact_methods/create.html
+++ b/source/documentation/rest/users/contact_methods/create.html
@@ -142,7 +142,14 @@ POST https://<span class="base_url contenteditable persist" contenteditable="tru
   </h3>
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
-    -d '{"contact_method":{"type":"<span class='curl_params-type contenteditable' contenteditable='true'>phone</span>","address":"<span class='curl_params-address contenteditable' contenteditable='true'>5551112222</span>","label":"<span class='curl_params-label contenteditable' contenteditable='true'>Island Lair</span>","country_code":"<span class='curl_params-country_code contenteditable' contenteditable='true'>1</span>"}}' \
+    -d '{
+          "contact_method": {
+            "type": "<span class='curl_params-type contenteditable' contenteditable='true'>phone</span>",
+            "address": "<span class='curl_params-address contenteditable' contenteditable='true'>5551112222</span>",
+            "label": "<span class='curl_params-label contenteditable' contenteditable='true'>Island Lair</span>",
+            "country_code": "<span class='curl_params-country_code contenteditable' contenteditable='true'>1</span>"
+          }
+        }' \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/users/<span class="sub_params_in_url-user_id user_id contenteditable" contenteditable="true">PPSFHH7</span>/contact_methods"</code>
 </pre>
   <p class="content-type-warning clearfix">
