--- a/source/documentation/rest/users/notification_rules/create.html
+++ b/source/documentation/rest/users/notification_rules/create.html
@@ -97,7 +97,12 @@ POST https://<span class="base_url contenteditable persist" contenteditable="tru
   </h3>
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
-    -d '{"notification_rule":{"contact_method_id":"<span class='curl_params-contact_method_id contenteditable' contenteditable='true'>PNGKILZ</span>","start_delay_in_minutes":4}}' \
+    -d '{
+          "notification_rule": {
+            "contact_method_id": "<span class='curl_params-contact_method_id contenteditable' contenteditable='true'>PNGKILZ</span>",
+            "start_delay_in_minutes": 4
+          }
+        }' \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/users/<span class="sub_params_in_url-user_id user_id contenteditable" contenteditable="true">PPSFHH7</span>/notification_rules"</code>
 </pre>
   <p class="content-type-warning clearfix">
