--- a/source/release_notes.html
+++ b/source/release_notes.html
@@ -314,6 +314,37 @@ August 27, 2012
 </ul>
 </td>
 </tr>
+<tr>
+<td class='date'>
+<a name='october-16-2015'></a>
+October 16, 2015
+</td>
+<td>
+<ul>
+<li>Request to POST or PUT API endpoints should be made with the body parameters wrapped by the resource name. For example:
+  <pre>
+<code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
+    -d '{
+      "team": {
+      "name": "<span class="curl_params-name contenteditable" contenteditable="true">A Mob of Emus</span>",
+      "description": "<span class="curl_params-name contenteditable" contenteditable="true">Marauding across Australia</span>"
+      }
+    }' \
+"https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/teams"</code>
+</pre>
+    instead of:
+  <pre>
+<code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
+    -d '{
+          "name": "<span class="curl_params-name contenteditable" contenteditable="true">A Mob of Emus</span>",
+          "description": "<span class="curl_params-name contenteditable" contenteditable="true">Marauding across Australia</span>"
+        }' \
+    "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/teams"</code>
+</pre>
+</li>
+</ul>
+</td>
+</tr>
 </tbody>
 </table>
 </div>
