Update release notes about basic_auth

--- a/source/index.html
+++ b/source/index.html
@@ -79,6 +79,22 @@ Release Notes
 <table class='table release-notes'>
 <tbody>
 <tr>
+<td class='date'>November 4, 2015</td>
+<td>
+<ul>
+<li>The PagerDuty API no longer supports basic authentication. Please use an API token and contact support for any issues.</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td class='date'>October 16, 2015</td>
+<td>
+<ul>
+<li>Request to POST or PUT API endpoints should be made with the body parameters wrapped by the resource name. See full release notes for examples.</li>
+</ul>
+</td>
+</tr>
+<tr>
 <td class='date'>October 3, 2014</td>
 <td>
 <ul>
@@ -99,14 +115,6 @@ Release Notes
 <td>
 <ul>
 <li>New on-call endpoints are available for <a href="documentation/rest/users/on_call">users</a> and <a href="documentation/rest/escalation_policies/on_call">escalation policies</a>.</li>
-</ul>
-</td>
-</tr>
-<tr>
-<td class='date'>August 19, 2013</td>
-<td>
-<ul>
-<li><a href="documentation/rest/incidents">New incident endpoints</a> for changing state are available.</li>
 </ul>
 </td>
 </tr>
