--- a/source/release_notes.html
+++ b/source/release_notes.html
@@ -17,6 +17,48 @@ redirect_from:
 <tbody>
 <tr>
 <td class='date'>
+<a name='november-4-2015'></a>
+November 4, 2015
+</td>
+<td>
+<ul>
+<li>The PagerDuty API no longer supports basic authentication. Please use an API token and contact support for any issues.</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td class='date'>
+<a name='october-16-2015'></a>
+October 16, 2015
+</td>
+<td>
+<ul>
+<li>Request to POST or PUT API endpoints should be made with the body parameters wrapped by the resource name. For example:
+<pre>
+<code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
+    -d '{
+    "team": {
+    "name": "<span class="curl_params-name contenteditable" contenteditable="true">A Mob of Emus</span>",
+    "description": "<span class="curl_params-name contenteditable" contenteditable="true">Marauding across Australia</span>"
+    }
+    }' \
+    "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/teams"</code>
+</pre>
+instead of:
+<pre>
+<code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
+    -d '{
+    "name": "<span class="curl_params-name contenteditable" contenteditable="true">A Mob of Emus</span>",
+    "description": "<span class="curl_params-name contenteditable" contenteditable="true">Marauding across Australia</span>"
+    }' \
+    "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/teams"</code>
+</pre>
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td class='date'>
 <a name='october-3-2014'></a>
 October 3, 2014
 </td>
@@ -311,37 +353,6 @@ August 27, 2012
 <ul>
 <li><a href="index.html">developer.pagerduty.com</a> site is live.</li>
 <li>New V1 APIs released for <a href="/documentation/rest/alerts">Alerts</a>, <a href="/documentation/rest/reports">Reports</a>, <a href="/documentation/rest/schedules">Schedules</a> and <a href="/documentation/rest/users">Users</a>.</li>
-</ul>
-</td>
-</tr>
-<tr>
-<td class='date'>
-<a name='october-16-2015'></a>
-October 16, 2015
-</td>
-<td>
-<ul>
-<li>Request to POST or PUT API endpoints should be made with the body parameters wrapped by the resource name. For example:
-  <pre>
-<code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
-    -d '{
-      "team": {
-      "name": "<span class="curl_params-name contenteditable" contenteditable="true">A Mob of Emus</span>",
-      "description": "<span class="curl_params-name contenteditable" contenteditable="true">Marauding across Australia</span>"
-      }
-    }' \
-"https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/teams"</code>
-</pre>
-    instead of:
-  <pre>
-<code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X POST \
-    -d '{
-          "name": "<span class="curl_params-name contenteditable" contenteditable="true">A Mob of Emus</span>",
-          "description": "<span class="curl_params-name contenteditable" contenteditable="true">Marauding across Australia</span>"
-        }' \
-    "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/teams"</code>
-</pre>
-</li>
 </ul>
 </td>
 </tr>
