Update partner form link

--- a/source/documentation/integration/events/index.html
+++ b/source/documentation/integration/events/index.html
@@ -36,7 +36,7 @@ redirect_from:
     The same event-based API can also be used to integrate a PagerDuty service with ticketing systems and various other software tools.
   </p>
   <p>
-    <strong>Interested in becoming a PagerDuty partner? Fill out <a href='http://www.pagerduty.com/partner-integrations/#section4' target='_blank' title='this form'>this form</a> for more information.</strong>
+    <strong>Interested in becoming a PagerDuty partner? Fill out <a href='https://pdconnect.wufoo.com/forms/become-a-pagerduty-partner/' target='_blank' title='this form'>this form</a> for more information.</strong>
   </p>
   <h2>
     Getting Started
