New banner for api v2

--- a/source/index.html
+++ b/source/index.html
@@ -2,8 +2,12 @@
 title: PagerDuty Developer - Home
 layout: index
 ---
+<div class="api-v20-hero">
+    <h1>Announcing the API v2.0 Beta</h1>
+    <a href="#" class="pgd-button">Learn More</a>
+</div>
                   <div class='landing'>
-                    <div class='get-started'>
+<!--                     <div class='get-started'>
                       <div class='main-hero section'>
                         <h1>PagerDuty API</h1>
                       </div>
@@ -34,7 +38,7 @@ layout: index
                           Share what you've made! Email us at <a href="mailto:developers@pagerduty.com">developers@pagerduty.com</a> to let us know how you're building out your operation performance platform.
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                     
                     <div class='section'>
                       <h3>Want to build something without coding?</h3>
