Links matter, yo.

--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@ layout: index
 ---
 <div class="api-v20-hero">
     <h1>Announcing the API v2.0 Beta</h1>
-    <a href="#" class="pgd-button">Learn More</a>
+    <a href="https://v2.developer.pagerduty.com" class="pgd-button">Learn More</a>
 </div>
                   <div class='landing'>
 <!--                     <div class='get-started'>
