Maintenance windows: 201, not a 200
We actually return a '201 Created', not a '200 OK'.

--- a/source/documentation/rest/maintenance_windows/create.html
+++ b/source/documentation/rest/maintenance_windows/create.html
@@ -190,7 +190,7 @@ POST https://<span class="base_url contenteditable persist" contenteditable="tru
   </p>
   <div class="clearfix"></div>
   <h4>
-    Response <span class="response-status">Status: 200 OK <a href="/documentation/rest/errors#http_codes"></a></span>
+    Response <span class="response-status">Status: 201 CreatedK <a href="/documentation/rest/errors#http_codes"></a></span>
   </h4>
   <div class="response">
     <pre>
