Make JSON valid again!
There was an extra closing curly brace in the curl example.

--- a/source/documentation/rest/users/update.html
+++ b/source/documentation/rest/users/update.html
@@ -138,7 +138,7 @@ PUT https://<span class="base_url contenteditable persist" contenteditable="true
             "role": "<span class='curl_params-role contenteditable' contenteditable='true'>admin</span>",
             "name": "<span class='curl_params-name contenteditable' contenteditable='true'>Bart Simpson</span>",
             "email": "<span class='curl_params-email contenteditable' contenteditable='true'>bart@example.com</span>",
-            "job_title": "<span class='curl_params-job_title contenteditable' contenteditable='true'>Developer</span>"}
+            "job_title": "<span class='curl_params-job_title contenteditable' contenteditable='true'>Developer</span>"
           }
         }' \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/users/<span class="sub_params_in_url-id id contenteditable" contenteditable="true">PIJ90N7</span>"</code>
